# charByChar

./: LICENCE  README.md  pyproject.toml
CharByChar/: CharByChar.py  __init__.py  example-1.py
examples/: example-1.py
src/: charByChar
