[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">= 3.8"
name="CharByChar"
description = "Character by character is a python script allowing you to display text as if someone is typing it!"
version="1.3"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = ["colorama"]
authors = [
	{name = "Zohaib Jafar"}
]
maintainers = [
	{name = "Zohaib Jafar"}
]

[project.urls]
Repository = "https://github.com/Mechinsam/charByChar.git"
